--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -7,7 +7,7 @@
 \RequirePackage{amsthm}
 \RequirePackage{amscd}
 \RequirePackage{tikz}
-\RequirePackage{tkz-graph}
+\RequirePackage{tikz-3dplot}
 
 \RequirePackage{agda}
 % tipa is redefining the semicolon and bang
