--- a/differential_geometry_in_hott/sage/torus.ipynb
+++ b/differential_geometry_in_hott/sage/torus.ipynb
@@ -5083,7 +5083,9 @@
    "cell_type": "code",
    "execution_count": 151,
    "id": "828ac340-677d-4c8f-9ca1-9b538277a2b0",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
