lots of writing today

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/connections.bib
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/connections.bib
@@ -510,3 +510,25 @@ url = {{https://www.cs.cmu.edu/~kmcrane/Projects/DDG/}},
    year={2021},
    publisher={Princeton University Press}
  }
+
+@article{whitehead_triangulation,
+  title={On {$C^1$}-complexes},
+  author={Whitehead, J. H. C.},
+  year={1940},
+  journal={Annals of Mathematics},
+  pages={809-824},
+  publisher={Princeton University Press}
+}
+
+@article{sco,
+ title={Nilpotent types and fracture squares in homotopy type theory},
+ volume={30},
+ ISSN={1469-8072},
+ url={http://dx.doi.org/10.1017/S0960129520000146},
+ DOI={10.1017/s0960129520000146},
+ number={5},
+ journal={Mathematical Structures in Computer Science},
+ publisher={Cambridge University Press (CUP)},
+ author={Scoccola, Luis},
+ year={2020},
+ month=may, pages={511–544} }
