--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_connections.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_connections.tex
@@ -1,6 +1,4 @@
-\section{Why this is geometry}
-
-How can we double check that we are describing the intended theory of geometry? In this section we will enumerate a wishlist of facts that we believe characterize the subject, and then provide evidence for some of them.
+\section{Higher geometry}
 
 Here are the translations that are covered in the current paper:
 \begin{align*}
@@ -13,14 +11,6 @@ Here are the translations that are covered in the current paper:
 & \text{\small The group of gauge transformations (bundle} &\quad &\text{\small Homotopies of classifying maps respect } \\ 
 & \text{\small automorphisms) acts on the space of connections.} & \quad&\text{\small the splitting of paths in sigma types.} \\ 
 \end{align*}
-
-And here are questions to explore in the future:
-\begin{enumerate}
-\item There's a notion of \emph{tensorial} that holds for forms but not for connections.
-\item Where is the Grassmannian structure of wedge product?
-\item The Gauss-Bonnet theorem holds, relating the curvature of a 2-manifold to the Euler characteristic.
-\item More generally, characteristic classes of bundles can be computed using a connection (Chern-Weil theory).
-\end{enumerate}
 
 \subsection{Higher maps contain connections}
 
