--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_ddg.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_ddg.tex
@@ -1,19 +1,40 @@
-\section{Introduction: Discrete differential geometry}
+\section{Overview}
+We will define 
+\begin{itemize}
+\item combinatorial 2-manifolds
+\item their tangent bundles
+\item vector fields,
+\end{itemize}
+and then observe emerging from those definitions the presence of
+\begin{itemize}
+\item connections
+\item curvature
+\item the index of a vector field,
+\end{itemize}
+and prove
+\begin{itemize}
+\item the Gauss-Bonnet theorem
+\item the Poincaré-Hopf theorem
+\item and the Leibniz formula.
+\end{itemize}
 
-The observation that sparks the following discussion is this: if we can manage to reformulate differential geometry in discrete terms (i.e. finite, without infinitesimals) then we may also be able to construct it synthetically in homotopy type theory. Furthermore, if we do capture geometry in HoTT then there's a chance that it can become clearer and smaller. We would then have new tools, a new audience, and a new program to (re)explore geometry, gauge theory, low dimensional topology, and mathematical physics.
+We will consider functions \( M\to \EM(\zz,1) \) where \( \EM(\zz,1) \) is the connected component in the universe of the Eilenberg-MacLane space \( \K(\zz,1) \) which we will take to be \( \so \), and where \( M:\ctmfd \) is a combinatorial manifold of dimension 2, which is a simplicial complex encoded in a higher inductive type, such that each vertex has a neighborhood that looks like a disk with a discrete circle boundary (i.e. a polygon). We can call terms \( C:\EM(\zz,1) \) ``mere circles.''
 
-Applied mathematicians and computer scientists have been developing discrete differential geometry (DDG) for many years. The 2003 Ph.D. thesis of Anil Hirani \cite{hiranidec} (see also the multi-author follow-up \cite{desbrundec}) defines finite versions of vector fields, differential forms, the wedge product, the Hodge star, and several differential operators (exterior derivative, div, grad, curl, Laplace-Beltrami, Lie derivative). Hirani and others cite Whitney's 1957 book \emph{Geometric Integration Theory}\cite{whitney1957} which develops a theory of cochains by integrating smooth forms over chains. In 2004 Melvil Leok, Jerrold Marsden, and Alan Weinstein \cite{leok} defined discrete connections on principal bundles. This is probably the work most spiritually similar to this paper. The motivation for the above constructions was applied mathematics: modeling the differential equations of mechanics and fluid mechanics with the so-called ``finite element'' methods. The theory has been adopted and extended by the computer graphics community as well (see Keenan Crane's course notes \cite{crane_ddg} for a gentle survey).
+Note that \( \EM(\zz,1) \) contains all the polygons. Therefore we can construct a map \( T:M\to\EM(\zz,1) \) that maps each vertex to the polygon consisting of its neighbors. This will serve as the circle bundle of the tangent bundle of the manifold, i.e. the principal bundle consisting of nonzero tangent vectors.
 
-The applied category theory community has begun to develop category theoretic foundations and software libraries to increase the reusability and compositionality of finite element methods in science and engineering problems. See for example recent work to bring discrete exterior calculus into the AlgebraicJulia library \cite{morris_decapodes} \cite{patterson_diffeq}.
-
-For these classically-minded applied mathematicians DDG is defined on combinatorial manifolds such as simplicial complexes, of any finite dimension. The 0-cells play the role of points, the 1-cells are path segments, and so on. They define \( n \)-forms as functions on the \( n \)-dimensional faces of the manifold into the real numbers, which is then extended by linearity to arbitrary \( n \)-chains. Exterior differentiation is defined by Stokes theorem (which is no longer a theorem in this setting), by which we mean the following. 
-
-\begin{mydef}
-(Exterior derivative in DDG.) Let \( \omega \) be an \( n-1 \)-form on a combinatorial manifold \( M \), and let \( \Omega \) be an \( n \)-face of \( M \). Let \( \partial \) be the boundary operator on faces. The exterior derivative \( d \) is defined by 
+Now consider the type \( \EMp(\zz,1)\defeq \sit{Y:\EM(\zz,1)}Y \) of pointed mere circles. We have the pullback
 \[ 
- d\omega(\Omega) = \omega(\partial\Omega).
+\begin{CD}
+P\defeq\sit{C:TM}C @>\overline{T}>> \EMp(\zz,1) \\
+@V{\pr_1}VV @V{\pr_1}VV \\
+M @>T>> \EM(\zz,1)
+\end{CD}
 \]
-\end{mydef}
+from the univalent fibration on the right, forming the usual fiber of \( T \) as a sigma type. Such classifying maps are not always principal bundles; there is an extra condition on \( T \) that we will get into later. For now it's important only that we are mapping into a univalent fibration so that we can make use of type theory. Univalent fibrations are always equivalent to a projection of a type of pointed types to some connected component of the universe.
 
-We will take the following path. We will use DDG as a stepping stone between smooth geometry and HoTT. We will learn how to see the finite analogues of infinitesimal constructions, and then use the syntax of type theory to re-present them. It won't always be a two-step process! Sometimes even the smooth arguments are made with finite combinatorial methods, and then a limit is taken. This is especially true where the Gauss-Bonnet and Poincaré-Hopf theorems are concerned.
-\[\mathrm{Differential\ geometry}\longrightarrow\mathrm{Discrete\ differential\ geometry}\longrightarrow \mathrm{Homotopy\ type\ theory}\]
+We will investigate that the data in dimensions 1 and 2 of \( T \) can be thought of as a connection, notably one that is not necessarily flat. Moreover, lifting \( T \) to \( \EMp(\zz,1) \) can be thought of as a vector field. There will in general not be a total lift, just a partial function. The domain will have a boundary of circles, and the winding number on these can be thought of as the index of the vector field. We can then examine the total curvature and the total index and prove that they are equal, and equal to the usual Euler characteristic. This will simultaneously prove the Poincaré-Hopf theorem and Gauss-Bonnet theorem in 2 dimensions, for combinatorial manifolds.
+
+Taking the dimension 1 part of a function can be thought of as its derivative. If the codomain has an H-space structure then we can ask about how the action on paths interacts with pointwise multiplication. This will lead us to the Leibniz formula in this context, which emerges simply from horizontal composition in the codomain.
+
+
+
