--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_examples.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_examples.tex
@@ -1,17 +1,20 @@
-\section{Examples}
+\section{Combinatorial manifolds}
 
-TODO:
-\begin{enumerate}
-\item Color-code each continuous cycle on the flat torus and the 3d torus, and use that to demonstrate how the curvature acts (begun).
-\item Motivate the refinement by showing a many-triangled neighborhood being tranpsorted around a small triangle.
-\end{enumerate}
-\subsection{The octahedron}
+We will adapt to higher inductive types in a straightforward manner the classical construction of \emph{combinatorial manifolds}. See for example the classic book by Kirby and Siebenmann\cite{kirby_siebenmann}.
 
-We will define some higher inductive types to serve as domain and codomain of these motivating examples.
+\begin{mydef}
+In an abstract simplicial complex \( X \), the \emph{link} of a vertex \( v \) is the set containing every face \( f\in X \) such that \( v\notin f \) and \( f\cup v \) is a face of \( X \).
+\end{mydef}
 
-\subsubsection{The higher inductive type \( \oo \)}
+\begin{mydef}
+A \emph{combinatorial manfiold} (or \emph{combinatorial triangulation}) of dimension \( n \) is a simplicial complex of dimension \( n \) such that the link of every vertex is a simplicial sphere of dimension \( n-1 \) (i.e. its geometric realization is homeomorphic to an \( n-1 \)-sphere).
+\end{mydef}
 
-First we need a square, which will be a stand-in for a circle that can support a notion of a quarter-rotation. 
+In a 2-dimensional combinatorial manifold, the link is the immediate neighbors of \( v \) and the (1-dimensional) edges between them, forming a polygon.
+
+A classical 1940 result of Whitehead, building on Cairn, states that every smooth manifold admits a combinatorial triangulation\cite{whitehead_triangulation}. So it appears reasonably well motivated to study this class of objects.
+
+To convert a simplicial complex to a higher inductive type, we will simply convert the data in each classical dimension to a path constructor of the corresponding HoTT dimension. We will begin with a type that is important both for the domain and the codomain of mere circles: a square.
 
 \begin{mydef}
 The higher inductive type \( C_4 \) (where C stands for ``circle'').
@@ -25,35 +28,50 @@ c_4c_1 &: c_4 = c_1 \\
 \end{align*}
 \end{mydef}
 
-\begin{figure}[h]
+\begin{figure}[htbp]
 \centering
 \input{discrete_gauge_theory_c4_tikz}
 \caption{The HIT \( C_4 \).}
 \end{figure}
 
-We may also think of \( C_4 \) as the join of the two-element sets \( \{c_1, c_3\}* \{c_2, c_4\} \).
+We may also think of \( C_4 \) as the join of the two-element sets \( \{c_1, c_3\}* \{c_2, c_4\} \). The circle itself is a non-example since it lacks the second vertex of the edge:
 
 \begin{mydef}
-The HIT \( \oo_0 \) is just 6 points, intended as the 0-skeleton of an octahedron, with vertices named after the colors on the faces of a Rubik's Cube.
+The higher inductive type \( \so \):
+\begin{align*}
+\so &:\Type \\
+\mathsf{base}&:\so \\
+\mathsf{loop}&:\mathsf{base}=\mathsf{base}
+\end{align*}
+\end{mydef}
+
+\begin{mylemma}
+The function \( \ell:C_4\to\so \) given by \( \ell(c_i)=\mathsf{base} \) for all \( i \), and \( \ell(c_ic_j)=\mathsf{loop} \) for all \( i,j \) is an equivalence with inverse \( \ell^{-1}(\mathsf{base})=c_1 \) and \( \ell^{-1}(\mathsf{loop})=c_1c_2\cdot c_2c_3\cdot c_3c_4\cdot c_4c_1 \). There are clearly other inverses for different choices of vertex.
+\end{mylemma}
+
+\begin{mycor}
+We have \( (C_4,||\ell||_{-1}):\EMzo. \)
+\end{mycor}
+
+\subsection{\texorpdfstring{The higher inductive type \( \oo \)}{The higher inductive type O}}
+
+We will create our first combinatorial manifold, a 2-sphere. We will adopt the convention that a subscript indicates the dimension of a subskeleton of a complex. For instance, we have \( \mathsf{base}:\so_0 \).
+
+\begin{mydef}
+The HIT \( \oo_0 \) is just 6 points, intended as the 0-skeleton of an octahedron, with vertices named after the colors on the faces of a puzzle cube.
 \[ w, y, b, r, g, o : \oo_0 \]
 \end{mydef}
 
 \begin{mydef}
 The HIT \( \oo_1 \) is the 1-skeleton of an octahedron.
 \begin{align*}
-w, y, b, r, g, o &: \oo_1 \\
-wb &: w=b \\
-wr &: w=r \\
-wg &: w=g \\
-wo &: w=o \\
-yb &: y=b \\
-yr &: y=r \\
-yg &: y=g \\
-yo &: y=o \\
-br &: b=r \\
-rg &: r=g \\
-go &: g=o \\
-ob &: o=b 
+w, y, b, r, g, o &: \oo_1 & yg &: y=g \\
+wb &: w=b & yo &: y=o \\
+wr &: w=r & br &: b=r \\
+wg &: w=g & rg &: r=g \\
+wo &: w=o & go &: g=o \\
+yb &: y=b & ob &: o=b \\
+yr &: y=r
 \end{align*}
 \end{mydef}
 
@@ -61,30 +79,18 @@ ob &: o=b
 The HIT \( \oo \) is an octahedron:
 \begin{align*}
 w, y, b, r, g, o &: \oo \\
-wb &: w=b \\
-wr &: w=r \\
-wg &: w=g \\
-wo &: w=o \\
-yb &: y=b \\
-yr &: y=r \\
-yg &: y=g \\
-yo &: y=o \\
-br &: b=r \\
-rg &: r=g \\
-go &: g=o \\
-ob &: o=b \\
-wbr &: wb\cdot br\cdot wr^{-1} = \refl_w \\
-wrg &: wr\cdot rg\cdot wg^{-1} = \refl_w \\
-wgo &: wg\cdot go\cdot wo^{-1} = \refl_w \\
-wob &: wo\cdot ob\cdot wb^{-1} = \refl_w \\
-yrb &: yr\cdot rb\cdot yb^{-1} = \refl_y \\
-ygr &: yg\cdot gr\cdot yr^{-1} = \refl_y \\
-yog &: yo\cdot og\cdot yg^{-1} = \refl_y \\
-ybo &: yb\cdot bo\cdot yo^{-1} = \refl_y
+wb &: w=b & br &: b=r & wbr &: wb\cdot br\cdot wr^{-1} = \refl_w \\
+wr &: w=r & rg &: r=g & wrg &: wr\cdot rg\cdot wg^{-1} = \refl_w \\
+wg &: w=g & go &: g=o & wgo &: wg\cdot go\cdot wo^{-1} = \refl_w \\
+wo &: w=o & ob &: o=b & wob &: wo\cdot ob\cdot wb^{-1} = \refl_w \\
+yb &: y=b & & & yrb &: yr\cdot rb\cdot yb^{-1} = \refl_y \\
+yr &: y=r & & & ygr &: yg\cdot gr\cdot yr^{-1} = \refl_y \\
+yg &: y=g & & & yog &: yo\cdot og\cdot yg^{-1} = \refl_y \\
+yo &: y=o & & & ybo &: yb\cdot bo\cdot yo^{-1} = \refl_y 
 \end{align*}
 \end{mydef}
 
-\begin{figure}[h]
+\begin{figure}[htbp]
 \centering
 \input{discrete_gauge_theory_oo_tikz}
 \caption{The HIT \( \oo \) which has 6 points, 12 1-paths, 8 2-paths.}
@@ -92,114 +98,32 @@ ybo &: yb\cdot bo\cdot yo^{-1} = \refl_y
 
 We have obvious maps \( \oo_0\xrightarrow[]{i_0} \oo_1\xrightarrow[]{i_1} \oo \) that include each skeleton into the next-higher-dimensional skeleton.
 
-\subsubsection{\texorpdfstring{\( \link \), \( \xbox \), and \( \xdisk \)}{link, xbox, and xdisk}}
+\subsubsection{The function \texorpdfstring{\( \link \)}{link}}
 
-Here we'll define combinatorial versions of tangent spaces and tangent circles, in the special case where every vertex has four neighbors.
-
-Combinatorial spaces have a concept called the \emph{link} of a vertex, which will be the main tool by which we connect with manifold theory. The vertices in the link are the vertices that are one edge away from the given point (its immediate neighbors), and the edges in the link are the edges connecting the neighbors to each other. If the link of an \( n \)-dimensional combinatorial space is always a combinatorial \( n-1 \)-sphere, then we say the space is a \emph{combinatorial triangulation}. We will look only at HITs that have a link that is merely equivalent to \( C_4 \). So first we need notation for a connected component of the universe:
-
-\begin{mydef}
-If we have \( X:\Type \) then we define \( \BAut X\defeq \sit{Y:\Type} ||X=Y||_{-1} \). 
-\end{mydef}
-
-Denote by \( abcd:\BAut C_4 \) the HIT with vertices \( a, b, c, d \) and edges \( ab, bc, cd, da \) which clearly has various isomorphisms with \( C_4 \).
-
-We can now define a map \( \link:\oo_0\to\BAut C_4 \). Extending this later on to the 1-skeleton and 2-skeleton will take us into differential geometry!
+Taking the link of a vertex gives us a map to the universe.
 
 \begin{mydef}
 \( \link:\oo_0\to\BAut C_4 \) is given by induction:
 \begin{align*}
-\link(w) &= brgo \\
-\link(y) &= bogr \\
-\link(b) &= woyr \\
-\link(r) &= wbyg \\
-\link(g) &= wryo \\
-\link(o) &= wgyb
+\link(w) &= brgo & \link(r) &= wbyg \\
+\link(y) &= bogr & \link(g) &= wryo \\
+\link(b) &= woyr & \link(o) &= wgyb
 \end{align*}
-We chose these orderings for the vertices by standing at the given vertex and enumerating the link in clockwise order, starting from \( w \) if possible, else \( b \).
+We chose these orderings for the vertices in the link, by visualizing standing at the given vertex as if it were the north pole, then looking south and enumerating the link in clockwise order, starting from \( w \) if possible, else \( b \).
 \end{mydef}
 
-\begin{figure}[h]
+\begin{figure}[htbp]
 \centering
 \input{discrete_gauge_theory_oo_transport_tikz}
 \caption{\( \link \) for the verticies \( w, b\) and \( r \).}
 \label{fig:triangle_of_equators}
 \end{figure}
 
-Besides the link we also want to consider the 5-pointed object that includes the vertex itself and the edges connecting it to the vertices in the link. We will call such a shape an \emph{xbox} since it is a square with both diagonals. We will denote xboxes by extending the square notation with a fifth letter to indicate the center of the xbox. For example, we can define an xbox \( C_{4c} \) as follows:
-
-\begin{mydef}
-The higher inductive type \( C_{4c} \) with center \( c \), also denoted \( c_1c_2c_3c_4c \).
-\begin{align*}
-C_{4c} &: \Type \\
-c_1, c_2, c_3, c_4, c &: C_{4c} \\
-c_1c_2 &: c_1 = c_2 \\
-c_2c_3 &: c_2 = c_3 \\
-c_3c_4 &: c_3 = c_4 \\
-c_4c_1 &: c_4 = c_1 \\
-c_1c &: c_1 = c \\
-c_2c &: c_2 = c \\
-c_3c &: c_3 = c \\
-c_4c &: c_4 = c 
-\end{align*}
-\end{mydef}
-
-And we get a map \( \xbox:\oo_0\to\Type \) similarly to \( \link \).
-\begin{mydef}
-\( \xbox:\oo_0\to\BAut C_{4c} \) is given by induction:
-\begin{align*}
-\xbox(w) &= brgow \\
-\xbox(y) &= bogry \\
-\xbox(b) &= woyrb \\
-\xbox(r) &= wbygr \\
-\xbox(g) &= wryog \\
-\xbox(o) &= wgybo
-\end{align*}
-\end{mydef}
-
-Finally we want to consider the 2-type that fills in the faces of the xbox. This is a contractible type we will call an \emph{xdisk}. 
-
-\begin{mydef}
-The higher inductive type \( C_{4c\xdisk} \) with center \( c \), also denoted \( c_1c_2c_3c_4c_\xdisk \).
-\begin{align*}
-C_{4c\xdisk} &: \Type \\
-c_1, c_2, c_3, c_4, c &: C_{4c\xdisk} \\
-c_1c_2 &: c_1 = c_2 \\
-c_2c_3 &: c_2 = c_3 \\
-c_3c_4 &: c_3 = c_4 \\
-c_4c_1 &: c_4 = c_1 \\
-c_1c &: c_1 = c \\
-c_2c &: c_2 = c \\
-c_3c &: c_3 = c \\
-c_4c &: c_4 = c \\
-c_1c_2c &: c_1c_2\cdot c_2c\cdot c_1c^{-1} = \refl \\
-c_2c_3c &: c_2c_2\cdot c_3c\cdot c_2c^{-1} = \refl \\
-c_3c_4c &: c_3c_2\cdot c_4c\cdot c_3c^{-1} = \refl \\
-c_4c_1c &: c_4c_2\cdot c_1c\cdot c_4c^{-1} = \refl
-\end{align*}
-\end{mydef}
-
-We can define \( \xdisk:\oo_0\to\BAut C_{4c\xdisk} \) by filling in the triangles in \( \xbox \).
-
-\begin{mydef}
-\( \xdisk:\oo_0\to\BAut C_{4c\xdisk} \) is given by induction:
-\begin{align*}
-\xbox(w) &= brgow_\xdisk \\
-\xbox(y) &= bogry_\xdisk \\
-\xbox(b) &= woyrb_\xdisk \\
-\xbox(r) &= wbygr_\xdisk \\
-\xbox(g) &= wryog_\xdisk \\
-\xbox(o) &= wgybo_\xdisk
-\end{align*}
-\end{mydef}
-
-\subsubsection{Extending \texorpdfstring{\( \link \)}{link}}
-
-Note that \( \BAut C_4 \) is of homotopy dimension at least 2, just as \( \oo \) is. The paths are isomorphisms between types that are merely equivalent to squares, and the 2-paths are homotopies between these. We can make further use of Figure~\ref{fig:triangle_of_equators} by imagining how \( \link \) changes as we slide from point to point. Sliding from \( w \) to \( b \) and tipping the link as we go, we see \( r\mapsto r \) and \( o\mapsto o \) because those lie on the axis of rotation. Then \( g\mapsto w \) and \( b\mapsto y \). 
+To extend \( \link \) to the 1-skeleton, imagine how \( \link \) changes as we slide from point to point. Sliding from \( w \) to \( b \) and tipping the link as we go, we see \( r\mapsto r \) and \( o\mapsto o \) because those lie on the axis of rotation. Then \( g\mapsto w \) and \( b\mapsto y \). 
 
 The full map on the 1-skeleton is:
 \begin{mydef}
-Define \( T_1:\oo\to\BAut C_4 \) on just the 1-skeleton by extending \( \link \) as follows:
+Define \( T_1:\oo_1\to\BAut C_4 \) on just the 1-skeleton by extending \( \link \) as follows:
 Transport away from \( w \):
 \begin{itemize}
 \item \( T_1(wb):[b, r, g, o]\mapsto [y, r, w, o] \) (\( r, o \) fixed)
@@ -227,6 +151,7 @@ It's very important to be able to visualize what \( T_1 \) does to triangular pa
 
 \begin{mydef}
 The map \( R:C_4\to C_4 \) rotates by one quarter turn, one ``click":
+\begin{multicols}{2}
 \begin{itemize}
 \item \( R(c_1) = c_2 \)
 \item \( R(c_2) = c_3 \)
@@ -237,12 +162,14 @@ The map \( R:C_4\to C_4 \) rotates by one quarter turn, one ``click":
 \item \( R(c_3c_4) = c_4c_1 \)
 \item \( R(c_4c_1) = c_1c_2 \)
 \end{itemize}
+\end{multicols}
 \end{mydef}
 
 Now let's extend \( T_1 \) to all of \( \oo \) by providing values for the eight faces. The face \( wbr \) is a path from \( \refl_w \) to the concatenation \( wb\cdot br\cdot rw \), and so the image of \( wbr \) under the extended version of \( T_1 \) must be a homotopy from \( \refl_{T_1(w)} \) to \( T_1(wb\cdot br\cdot rw) \).
 
 \begin{mydef}
 Define \( T_2:\oo\to\BAut C_4 \) by extending \( T_1 \) to the faces as follows:
+\begin{multicols}{2}
 \begin{itemize}
 \item \( T_2(wbr)=H_R \) 
 \item \( T_2(wrg)=H_R \)
@@ -253,6 +180,7 @@ Define \( T_2:\oo\to\BAut C_4 \) by extending \( T_1 \) to the faces as follows:
 \item \( T_2(yog)=H_R \)
 \item \( T_2(ybo)=H_R \)
 \end{itemize}
+\end{multicols}
 where \( H_R:R=\refl \) is the obvious homotopy.
 \end{mydef}
 
@@ -264,42 +192,23 @@ We can define a combinatorial torus as a similar HIT. This time each vertex will
 
 To help parse this figure, imagine instead Figure~\ref{fig:flattorus}. We take this simple alternating-triangle pattern, then glue the left and right edges, then bend into Figure~\ref{fig:torus}. The fact that each column in Figure~\ref{fig:flattorus} has four dots corresponds to the torus in Figure~\ref{fig:torus} having a square in front, diamonds in the middle, and a square in back.
 
-\begin{figure}[h]
+\begin{figure}[htbp]
 \centering
 \input{discrete_gauge_theory_torus_tikz}
 \caption{Torus embedded in 3-dimensional space. Black lines trace four square-shaped paths, red ones connect the front square to the middle diamonds, and blue ones connect the back path to the middle ones.}
 \label{fig:torus}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}[htbp]
 \centering
 \input{discrete_gauge_theory_torusflat_tikz}
 \caption{An inspiration for the torus. Identify the sides and then the top, definitionally, to get the actual torus.}
 \label{fig:flattorus}
 \end{figure}
 
-It's a bit of a challenge to visualize how the connection should twist these ``xhexes'' as we move around. Part of the issue is that we have actually constrained ourselves quite a bit by requiring the tangent space to be the link of a point, which only has six points. We could be more precise about angles if the tangent spaces had many subdivisions of the circle. The way to achieve better approximations, which we will not pursue in this paper, is to \emph{refine} a given triangulation, and then choose a contractible neighborhood for each point which is not the link but goes ``farther out'' and consists of many edges and encloses many triangles. We could then transport along a single edge, and map between two circles that each have many segments, approximating to arbitrary precision any real-world application. The theory and practice of refinements is extensive and includes computer graphics research.
+It's a bit of a challenge to visualize how the connection should twist these links as we move around. Part of the issue is that we have actually constrained ourselves quite a bit by requiring the tangent space to be the link of a point, which only has six points. We could be more precise about angles if the tangent spaces had many subdivisions of the circle. The way to achieve better approximations, which we will not pursue in this paper, is to \emph{refine} a given triangulation, and then choose a contractible neighborhood for each point which is not the link but goes ``farther out'' and consists of many edges and encloses many triangles. We could then transport along a single edge, and map between two circles that each have many segments, approximating to arbitrary precision any real-world application. The theory and practice of refinements is extensive and includes computer graphics research.
 
-But given an arbitrary edge on our impoverished 3d-embedded torus, how should we decide how to map the hexagons at the endpoints? The goal is of course to approximate the actual geometry of transport on a curved torus, so we should learn a little about that. Which is comforting -- we're trying to capture geometry, so it's good that we need to use some!
-
-Of all the edges on our shape, the ones that are not very similar to geodesics are the squares in front and back. The two diamonds clearly correspond to highly symmetric geodesics, and less clearly there are four other cycles that are close enough to geodesics that if we drew the edges curved, they'd be actual geodesics on the torus they were hugging (Figure~\ref{fig:torus_geodesic}).
-
-
-\begin{figure}[h]
-\centering
-\includegraphics[scale=.3]{torus_geodesic.png}
-\caption{A geodesic on a torus with inner radius 1 and outer radius 3.}
-\label{fig:torus_geodesic_smooth}
-\end{figure}
-
-\begin{figure}[h]
-\centering
-\input{discrete_gauge_theory_torus_tr_frame1_tikz}
-\caption{This path is very similar to an actual geodesic on an actual torus. There are three other analogous ones, one that also passes through the top and bottom of the outer diamond, and two that are 90 degree rotations of those two.}
-\label{fig:torus_geodesic}
-\end{figure}
-
-\begin{figure}[h]
+\begin{figure}[htbp]
 \centering
 \input{discrete_gauge_theory_torus_tr_frame2_tikz}
 \input{discrete_gauge_theory_torus_tr_frame3_tikz}
@@ -313,17 +222,12 @@ Transport along geodesics is minimal in a technical sense, meaning the least twi
 
 I am talking about twisting on individual edges, but that's not a concept with standalone meaning since the hexagons are torsors. I'm impicitly using the flat torus to makes the hexagons all pointed, by pointing them at the top as they appear in Figure~\ref{fig:flattorus}. But let's not use that extra information, and instead let's start talking about loops around faces.
 
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=200pt]{dense_circle.pdf}
+\caption{To better approximate small transport angles, we would refine the mesh and instead of the link we would use circle-like paths that include more triangles, and have many edges. Imagine transporting the blue circle around the triangle indicated in the center. The point on the circle might move through the path shown, indicating how the circle comes back rotated just a few degrees counterclockwise. Use your imagination to discretize the smooth circle onto the points of the mesh.}
+\label{fig:dense_circle}
+\end{figure}
 
-\subsection{Combinatorial manifolds}
-
-(This section is not quite off the ground.)
-
-The combinatorial structure we have in mind is a nerve of a good open cover. What do we know about which smooth manifolds have such covers? While we're at it, let's survey all the combinatorial-flavored spaces and survey what smooth manifolds are homotopy equivalent to which structures.
-
-What topological manifolds are equivalent to a CW complex? The answer is the composition of a few results summarized by Allen Hatcher\footnote{\url{https://mathoverflow.net/questions/201944/topological-n-manifolds-have-the-homotopy-type-of-n-dimensional-cw-complexes}} (citing \cite{kirby_siebenmann} and \cite{freedman_quinn}):
-
-\begin{quote}
-Every topological manifold has a handlebody structure except in dimension 4, where a 4-manifold has a handlebody structure if and only if it is smoothable. This is a theorem on page 136 of Freedman and Quinn's book ``Topology of 4-Manifolds'', with a reference given to the Kirby-Siebenmann book for the higher-dimensional case. It is then an elementary fact that an \( n \)-manifold with a handlebody structure is homotopy equivalent to a CW complex with one \( k \)-cell for each \( k \)-handle, so in particular there are no cells of dimension greater than \( n \). At least in the compact case a manifold with a handlebody structure is in fact homeomorphic to a CW complex with \( k \)-cells corresponding to \( k \)-handles; see page 107 of Kirby-Siebenmann. This probably holds in the noncompact case as well, though I don't know a reference.
-\end{quote}
 
 
